feat: update page metadata and favicon

--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <meta
+      name="description"
+      content="A fast-paced word game where you create words starting with specific letters against the clock!"
+    />
+    <meta name="theme-color" content="#10B981" />
+    <title>Wordy - Fast-Paced Word Game</title>
   </head>
   <body>
     <div id="root"></div>
